Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/classfiles/attributes/ConstantValue/BrokenConstantValue.java
/* @test /nodynamiccopyright/
 * @compile HasBrokenConstantValue.jcod
 * @compile/fail/ref=BrokenConstantValue.out -XDrawDiagnostics BrokenConstantValue.java
 */
public class BrokenConstantValue {
     void t() {
         String s = HasBrokenConstantValue.VALUE;
     }
}
